# sarl-agent-ai

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DELIVERY.md  LICENSE  QUALITY.md  README.md  docker-compose.yml  project.yaml  swarm.yaml
docs/: BUILD.md  ETAT-STACK-HERMES-2026-06-18.md  ROSTER.md  (+9 more)
services/nautilus-runner/: .gitignore  Dockerfile  README.md  pyproject.toml
services/nautilus-runner/app/: catalog_runner.py  config.py  data.py  guards.py  ibkr_check.py  ibkr_data.py  journal.py  main.py  mcp_server.py  reports.py  research_loop.py  runner.py  scheduler.py  sweep.py  viz.py  walk_forward.py
services/nautilus-runner/data/historical/: README.md
services/nautilus-runner/strategies/: bollinger_mr.py  donchian_break.py  eurusd_ema_atr.py  eurusd_ema_cross.py
services/nautilus-runner/tests/: test_backtest_smoke.py  test_catalog_backtest.py  test_environment.py  test_ibkr_check.py  test_journal_schema.py  test_mcp_tools.py  test_no_live_tools.py  test_reports_scheduler.py  test_strategy_families.py  test_strategy_walkforward.py  test_sweep_markets.py  test_viz.py
services/project-memory-mcp/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/project-memory-mcp/migrations/: 001_init.down.sql  001_init.sql  002_semantic_embeddings.down.sql  002_semantic_embeddings.sql
services/project-memory-mcp/src/sarl_project_memory_mcp/: __init__.py  config.py  db.py  embeddings.py  policy.py  schemas.py  server.py  tools.py
services/project-memory-mcp/tests/: test_memory_search.py  test_memory_write.py  test_postgres_integration.py
(+222 files in other folders)
