[project]
name = "sarl-project-memory-mcp"
version = "0.2.0"
description = "MCP project memory service for SARL-Agent-AI"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.27,<2",
  "psycopg[binary,pool]>=3.2,<4",
]

[project.scripts]
sarl-project-memory-mcp = "sarl_project_memory_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sarl_project_memory_mcp"]
